# soundgate

./: .gitignore  README.md  flake.nix  pyproject.toml
daemon/: pyproject.toml
daemon/src/soundgate/: main.py
daemon/src/soundgate/adapters/: coverart.py
daemon/src/soundgate/adapters/sinks/: alsa_volume.py  pipewire_volume.py
daemon/src/soundgate/adapters/sinks/rest_api/: adapter.py  app.py
daemon/src/soundgate/adapters/sources/: bluetooth.py  librespot.py  spotifyd.py
daemon/src/soundgate/application/: snapshot.py
daemon/src/soundgate/application/ports/: inbound.py  outbound.py
daemon/src/soundgate/application/use_cases/: process_event.py  query_state.py
daemon/src/soundgate/domain/: aggregator.py  events.py  source.py
daemon/tests/unit/: test_main.py
daemon/tests/unit/adapters/coverart/: test_lookup.py
daemon/tests/unit/adapters/sinks/alsa_volume/: conftest.py  test_from_env.py  test_source_exclusion.py  test_sync_volume.py
daemon/tests/unit/adapters/sinks/pipewire_volume/: conftest.py  test_get_volume.py  test_restore_saved.py  test_set_volume.py
daemon/tests/unit/application/: conftest.py
daemon/tests/unit/application/process_event/: test_metadata_handling.py  test_snapshot_publishing.py  test_source_registration.py  test_state_handling.py  test_tick.py  test_volume_feedback_source.py  test_volume_handling.py
daemon/tests/unit/application/query_state/: test_query_state.py
daemon/tests/unit/domain/: test_events.py  test_source.py
daemon/tests/unit/domain/aggregator/: test_active_source.py  test_apply_state.py  test_touch.py
(+53 files in other folders)
