[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["aiohttp"]
name = "soundgate"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
soundgate = "soundgate.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/soundgate"]

[tool.isort]
known_first_party = ["soundgate"]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
